<resources>
    <string name="app_name">Qiandao</string>
    <!-- drawer-->
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="drawer_read">阅读</string>
    <string name="drawer_activity">活动</string>
    <string name="drawer_market">商城</string>
    <string name="drawer_author">推荐作者</string>
    <string name="drawer_report">创业求报道</string>
    <string name="drawer_info">通知</string>

    <!-- BaseHandle-->
    <string name="time_out">网络超时</string>
    <string name="net_work_error">网络错误</string>
    <string name="no_connection_error">网络链接错误</string>
    <string name="server_error">服务端错误</string>

    <!--活动首页-->
    <string name="registration">签到</string>
    <string name="information">咨询</string>
    <string name="management">管理</string>

    <!--登录页面-->
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="login_error">账号或密码错误，请重新输入</string>
    <string name="change_theme">切换主题</string>




    <!--jianshu-->
    <string name="article">文章</string>
    <string name="special_topic">专题</string>
    <string name="find">发现</string>
    <string name="focus">关注</string>
    <string name="jian_friends">简友圈</string>
    <string name="mine">我的</string>
</resources>
